--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui_data = pd.read_csv('https://startg2545.github.io/user_item_tutorial.csv')\n",
-    "i_data = pd.read_csv('https://startg2545.github.io/item_tutorial.csv')"
+    "i_data = pd.read_excel('dataset/i_data.xlsx')\n",
+    "ui_data = pd.read_excel('dataset/ui_data.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ui_data = pd.read_csv('https://startg2545.github.io/user_item_tutorial.csv')\n",
+    "# i_data = pd.read_csv('https://startg2545.github.io/item_tutorial.csv')"
    ]
   },
   {
@@ -42,28 +52,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.isne_recommendation import TfidfLinearKernel"
+    "from isne_recommendation import TfidfLinearKernel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Addiction Treatment: Clinical Skills for Healt...</td>\n",
+       "      <td>0.261621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Write A Feature Length Screenplay For Film Or ...</td>\n",
+       "      <td>0.226188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>Physics of silicon solar cells</td>\n",
+       "      <td>0.210851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Internet of Things: How did we get here?</td>\n",
+       "      <td>0.205599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>Python and Machine Learning for Asset Management</td>\n",
+       "      <td>0.190557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>Medical Applications of Particle Accelerators ...</td>\n",
+       "      <td>0.185854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Foundations of Public Health Practice: Behavio...</td>\n",
+       "      <td>0.175814</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Biomedical Visualisation</td>\n",
+       "      <td>0.170230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>COVID-19 - A clinical update</td>\n",
+       "      <td>0.168129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Health Care IT: Challenges and Opportunities</td>\n",
+       "      <td>0.166725</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Course     Score\n",
+       "1   Addiction Treatment: Clinical Skills for Healt...  0.261621\n",
+       "79  Write A Feature Length Screenplay For Film Or ...  0.226188\n",
+       "56                     Physics of silicon solar cells  0.210851\n",
+       "41           Internet of Things: How did we get here?  0.205599\n",
+       "62   Python and Machine Learning for Asset Management  0.190557\n",
+       "52  Medical Applications of Particle Accelerators ...  0.185854\n",
+       "31  Foundations of Public Health Practice: Behavio...  0.175814\n",
+       "3                            Biomedical Visualisation  0.170230\n",
+       "8                        COVID-19 - A clinical update  0.168129\n",
+       "40       Health Care IT: Challenges and Opportunities  0.166725"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = TfidfLinearKernel.fit(i_data)\n",
-    "prediction = TfidfLinearKernel.predict('Martha Long', i_data, ui_data, model, 10)"
+    "prediction = TfidfLinearKernel.predict('Martha Long', i_data, ui_data, model, 10)\n",
+    "prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.136986301369863"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train, test = TfidfLinearKernel.train_test_split(ui_data)\n",
     "evaluation = TfidfLinearKernel.evaluate_model(train, test, i_data, model)\n",
@@ -72,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4349315068493151"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train, test = FeatureRatingsKNN.train_test_split(ui_data)\n",
     "model = FeatureRatingsKNN.fit(train)\n",
@@ -103,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.isne_recommendation import Hybrid"
+    "from isne_recommendation import Hybrid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +254,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7568493150684932"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train, test = Hybrid.train_test_split(ui_data)\n",
     "model = Hybrid.fit(i_data, train)\n",
