--- a/test.ipynb
+++ b/test.ipynb
@@ -25,22 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i_data = pd.read_excel('dataset/i_data.xlsx')\n",
-    "ui_data = pd.read_excel('dataset/ui_data.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ui_data = pd.read_csv('https://startg2545.github.io/user_item_tutorial.csv')\n",
-    "# i_data = pd.read_csv('https://startg2545.github.io/item_tutorial.csv')"
+    "ui_data = pd.read_csv('https://startg2545.github.io/user_item_tutorial.csv')\n",
+    "i_data = pd.read_csv('https://startg2545.github.io/item_tutorial.csv')"
    ]
   },
   {
