--- a/test.ipynb
+++ b/test.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from isne_recommendation import TfidfLinearKernel"
+    "from src.isne_recommendation import TfidfLinearKernel"
    ]
   },
   {
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "0.136986301369863"
+       "0.1267123287671233"
       ]
      },
      "execution_count": 5,
@@ -176,7 +176,7 @@
     }
    ],
    "source": [
-    "train, test = TfidfLinearKernel.train_test_split(ui_data)\n",
+    "train, test = TfidfLinearKernel.train_test_split(ui_data, test_size=0.2)\n",
     "evaluation = TfidfLinearKernel.evaluate_model(train, test, i_data, model)\n",
     "evaluation"
    ]
@@ -187,17 +187,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from isne_recommendation import FeatureRatingsKNN"
+    "from src.isne_recommendation import FeatureRatingsKNN"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course</th>\n",
+       "      <th>Cosine Distance</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Addiction Treatment: Clinical Skills for Healt...</td>\n",
+       "      <td>0.670731</td>\n",
+       "      <td>0.329269</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              Course  Cosine Distance  \\\n",
+       "0  Addiction Treatment: Clinical Skills for Healt...         0.670731   \n",
+       "\n",
+       "      Score  \n",
+       "0  0.329269  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = FeatureRatingsKNN.fit(ui_data)\n",
-    "prediction = FeatureRatingsKNN.predict('Martha Long', ui_data, model, 10)"
+    "prediction = FeatureRatingsKNN.predict('Martha Long', ui_data, model, 10)\n",
+    "prediction"
    ]
   },
   {
@@ -208,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4349315068493151"
+       "0.4315068493150685"
       ]
      },
      "execution_count": 8,
@@ -217,7 +268,7 @@
     }
    ],
    "source": [
-    "train, test = FeatureRatingsKNN.train_test_split(ui_data)\n",
+    "train, test = FeatureRatingsKNN.train_test_split(ui_data, test_size=0.2)\n",
     "model = FeatureRatingsKNN.fit(train)\n",
     "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model)\n",
     "evaluation"
@@ -229,17 +280,123 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from isne_recommendation import Hybrid"
+    "from src.isne_recommendation import Hybrid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Course</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Addiction Treatment: Clinical Skills for Healt...</td>\n",
+       "      <td>0.308550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Culminating Project in Health Informatics</td>\n",
+       "      <td>0.086977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>COVID-19 - A clinical update</td>\n",
+       "      <td>0.067086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Front-End Web UI Frameworks and Tools: Bootstr...</td>\n",
+       "      <td>0.055897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>EU policy and implementation: making Europe work!</td>\n",
+       "      <td>0.054619</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A Crash Course in Data Science</td>\n",
+       "      <td>0.054594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>Write A Feature Length Screenplay For Film Or ...</td>\n",
+       "      <td>0.053081</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>Sharpened Visions: A Poetry Workshop</td>\n",
+       "      <td>0.051187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Introduction to Supply Chain Finance &amp; Blockch...</td>\n",
+       "      <td>0.049684</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Foundations of Public Health Practice: Behavio...</td>\n",
+       "      <td>0.047820</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  Course     Score\n",
+       "Index                                                             \n",
+       "1      Addiction Treatment: Clinical Skills for Healt...  0.308550\n",
+       "15             Culminating Project in Health Informatics  0.086977\n",
+       "8                           COVID-19 - A clinical update  0.067086\n",
+       "33     Front-End Web UI Frameworks and Tools: Bootstr...  0.055897\n",
+       "22     EU policy and implementation: making Europe work!  0.054619\n",
+       "0                         A Crash Course in Data Science  0.054594\n",
+       "79     Write A Feature Length Screenplay For Film Or ...  0.053081\n",
+       "67                  Sharpened Visions: A Poetry Workshop  0.051187\n",
+       "45     Introduction to Supply Chain Finance & Blockch...  0.049684\n",
+       "31     Foundations of Public Health Practice: Behavio...  0.047820"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = Hybrid.fit(i_data, ui_data)\n",
-    "prediction = Hybrid.predict('Martha Long', i_data, ui_data, model, 10)"
+    "prediction = Hybrid.predict('Martha Long', i_data, ui_data, model, 10)\n",
+    "prediction"
    ]
   },
   {
@@ -250,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7568493150684932"
+       "0.6883561643835616"
       ]
      },
      "execution_count": 11,
@@ -259,7 +416,7 @@
     }
    ],
    "source": [
-    "train, test = Hybrid.train_test_split(ui_data)\n",
+    "train, test = Hybrid.train_test_split(ui_data, test_size=0.2)\n",
     "model = Hybrid.fit(i_data, train)\n",
     "evaluation = Hybrid.evaluate_model(train, test, i_data, model)\n",
     "evaluation"
