--- a/test.ipynb
+++ b/test.ipynb
@@ -167,7 +167,7 @@
     {
      "data": {
       "text/plain": [
-       "0.1267123287671233"
+       "0.02578870900788709"
       ]
      },
      "execution_count": 5,
@@ -177,8 +177,8 @@
    ],
    "source": [
     "train, test = TfidfLinearKernel.train_test_split(ui_data, test_size=0.2)\n",
-    "evaluation = TfidfLinearKernel.evaluate_model(train, test, i_data, model)\n",
-    "evaluation"
+    "score = TfidfLinearKernel.f1_score(train, test, i_data, model)\n",
+    "score"
    ]
   },
   {
@@ -259,7 +259,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4315068493150685"
+       "0.07923412204234122"
       ]
      },
      "execution_count": 8,
@@ -270,8 +270,8 @@
    "source": [
     "train, test = FeatureRatingsKNN.train_test_split(ui_data, test_size=0.2)\n",
     "model = FeatureRatingsKNN.fit(train)\n",
-    "evaluation = FeatureRatingsKNN.evaluate_model(train, test, model)\n",
-    "evaluation"
+    "score = FeatureRatingsKNN.f1_score(train, test, model)\n",
+    "score"
    ]
   },
   {
@@ -407,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6883561643835616"
+       "0.12992943129929432"
       ]
      },
      "execution_count": 11,
@@ -418,8 +418,8 @@
    "source": [
     "train, test = Hybrid.train_test_split(ui_data, test_size=0.2)\n",
     "model = Hybrid.fit(i_data, train)\n",
-    "evaluation = Hybrid.evaluate_model(train, test, i_data, model)\n",
-    "evaluation"
+    "score = Hybrid.f1_score(train, test, i_data, model)\n",
+    "score"
    ]
   },
   {
