--- a/test.ipynb
+++ b/test.ipynb
@@ -163,6 +163,36 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = TfidfLinearKernel.train_test_split(ui_data, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1469440832249675"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hit_rate = TfidfLinearKernel.hit_rate(train, test, i_data, model)\n",
+    "hit_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -170,20 +200,19 @@
        "0.02578870900788709"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train, test = TfidfLinearKernel.train_test_split(ui_data, test_size=0.2)\n",
-    "score = TfidfLinearKernel.f1_score(train, test, i_data, model)\n",
-    "score"
+    "f1_score = TfidfLinearKernel.f1_score(train, test, i_data, model)\n",
+    "f1_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +269,7 @@
        "0  0.329269  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +282,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = FeatureRatingsKNN.train_test_split(ui_data, test_size=0.2)\n",
+    "model = FeatureRatingsKNN.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.48244473342002603"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hit_rate = FeatureRatingsKNN.hit_rate(train, test, model)\n",
+    "hit_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -262,21 +322,19 @@
        "0.07923412204234122"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train, test = FeatureRatingsKNN.train_test_split(ui_data, test_size=0.2)\n",
-    "model = FeatureRatingsKNN.fit(train)\n",
-    "score = FeatureRatingsKNN.f1_score(train, test, model)\n",
-    "score"
+    "f1_score = FeatureRatingsKNN.f1_score(train, test, model)\n",
+    "f1_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +446,7 @@
        "31     Foundations of Public Health Practice: Behavio...  0.047820"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,41 +459,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = Hybrid.train_test_split(ui_data, test_size=0.2)\n",
+    "model = Hybrid.fit(i_data, train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.12992943129929432"
+       "0.6917808219178082"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train, test = Hybrid.train_test_split(ui_data, test_size=0.2)\n",
-    "model = Hybrid.fit(i_data, train)\n",
-    "score = Hybrid.f1_score(train, test, i_data, model)\n",
-    "score"
+    "hit_rate = Hybrid.hit_rate(train, test, i_data, model)\n",
+    "hit_rate"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11624699531071445"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Results "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- **The first approach**: _TF-IDF_ and _Linear Kernel_ Performance has an accuracy score of 13.70 percentage\n",
-    "- **The second approach**: _Feature Ratings_ and _KNN Performance_ has an accuracy score of 43.50 percentage\n",
-    "- **The third approach**: _Hybrid_ has an accuracy score of 75.68 percentage"
+    "f1_score = Hybrid.f1_score(train, test, i_data, model)\n",
+    "f1_score"
    ]
   }
  ],
